[package]
name = "webadvisor_auto_register"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
petgraph = "0.6.5"
tokio = {version = "1.38.2", features = ["default", "rt", "rt-multi-thread", "macros", "time"] }
otpauth = "0.4.1"
